--- a/TwitchLib.PubSub/TwitchLib.PubSub.csproj
+++ b/TwitchLib.PubSub/TwitchLib.PubSub.csproj
@@ -26,6 +26,8 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="TwitchLib.Communication" Version="1.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TwitchLib.Communication\src\TwitchLib.Communication\TwitchLib.Communication.csproj" />
   </ItemGroup>
 </Project>
