--- a/TwitchLib.PubSub/TwitchLib.PubSub.csproj
+++ b/TwitchLib.PubSub/TwitchLib.PubSub.csproj
@@ -28,6 +28,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\TwitchLib.Communication\src\TwitchLib.Communication\TwitchLib.Communication.csproj" />
+    <ProjectReference Include="..\..\..\TwitchLib.Communication\src\TwitchLib.Communication\TwitchLib.Communication.csproj" />
   </ItemGroup>
 </Project>
